--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
           </button>
         </div>
         <nav class="navbar hidden">
+          <div class="home_button">
+            <a class="home_img nav_img" href="../index.html">
+              <img
+                src="../images/house-solid.svg"
+                alt=""
+                width="30"
+                height="30"
+              />
+            </a>
+            <button class="toogle_btn">
+              <img
+                src="../images/bars-solid.svg"
+                alt=""
+                width="30"
+                height="28"
+              />
+            </button>
+          </div>
           <ul class="header__list">
             <li>
               <a href="./pages/works.html">Works</a>
