--- a/pages/works.html
+++ b/pages/works.html
@@ -24,6 +24,24 @@
           </button>
         </div>
         <nav class="navbar hidden">
+          <div class="home_button">
+            <a class="home_img nav_img" href="../index.html">
+              <img
+                src="../images/house-solid.svg"
+                alt=""
+                width="30"
+                height="30"
+              />
+            </a>
+            <button class="toogle_btn">
+              <img
+                src="../images/bars-solid.svg"
+                alt=""
+                width="30"
+                height="28"
+              />
+            </button>
+          </div>
           <ul class="header__list">
             <li>
               <a class="active" href="./works.html">Works</a>
@@ -46,7 +64,7 @@
           <h1>Work</h1>
           <div class="work__cards">
             <div class="work__cards-box">
-              <a href="./work-detail.html">
+              <a class="img_link" href="./work-detail.html">
                 <img class="work__img" src="../images/workimg.png" alt="" />
               </a>
               <div class="work__wrapper">
